renamed file to reflect the nature of analysis performed until now.

--- a/Titanic kaggle - exploratory data analysis.ipynb
+++ b/Titanic kaggle - exploratory data analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Survival analysis of Titanic training dataset"
+    "# Survival analysis of Titanic training dataset - EDA"
    ]
   },
   {
