--- a/titanic_kaggle_prediction_model_ensemble.ipynb
+++ b/titanic_kaggle_prediction_model_ensemble.ipynb
@@ -25,20 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Vivek/anaconda/envs/titanic_kaggle/lib/python2.7/site-packages/IPython/html.py:14: ShimWarning: The `IPython.html` package has been deprecated. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
-      "  \"`IPython.html.widgets` has moved to `ipywidgets`.\", ShimWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "pd.set_option('display.max_columns', None) # Display any number of columns\n",
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -155,14 +146,14 @@
        "2      0  STON/O2. 3101282   7.9250   NaN        S  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_raw = pd.read_csv('train.csv')\n",
-    "train_raw.head(3)"
+    "train = pd.read_csv('train.csv')\n",
+    "train.head(3)"
    ]
   },
   {
@@ -173,8 +164,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quick explorations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    61.616162\n",
+       "1    38.383838\n",
+       "Name: Survived, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check the class distribution of the response variable\n",
+    "train.Survived.value_counts()/train.shape[0]*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Almost 60:40 split. Looks cool to me. No class imbalance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -194,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -213,6 +243,89 @@
     "print train.Age.isnull().sum()\n",
     "train['Age'].fillna(train['Age'].median(), inplace = True)\n",
     "print train.Age.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check out SibSp and Parch features\n",
+    "print train.SibSp.isnull().sum()\n",
+    "print train.Parch.isnull().sum()\n",
+    "print train.Fare.isnull().sum()\n",
+    "print train.Embarked.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    891.000000\n",
+       "mean      32.204208\n",
+       "std       49.693429\n",
+       "min        0.000000\n",
+       "25%        7.910400\n",
+       "50%       14.454200\n",
+       "75%       31.000000\n",
+       "max      512.329200\n",
+       "Name: Fare, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.Fare.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "S    644\n",
+       "C    168\n",
+       "Q     77\n",
+       "Name: Embarked, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.Embarked.value_counts()\n",
+    "\n",
+    "# most of them seem to be from Southampton S, so encode the 2 remaining null values as 'S'"
    ]
   },
   {
@@ -244,14 +357,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a function to do the data cleansing for us"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def df_cleanup(raw_dataset):\n",
+    "def titanic_wrangling(raw_dataset):\n",
     "    \n",
     "    # convert the passengerid column into index. I've already checked that this field is unique per row.\n",
     "    clean_dataset = raw_dataset.set_index('PassengerId', drop=True)\n",
@@ -260,28 +380,108 @@
     "    # median age of the passengers\n",
     "    clean_dataset['Age'].fillna(clean_dataset['Age'].median(), inplace = True)\n",
     "    \n",
-    "    # Drop redundant columns from the clean dataset\n",
-    "    # note that I'm removing the cabin information for now, because there is too much scope for overfitting here \n",
-    "    clean_dataset.drop(['Name','Cabin'], axis=1, inplace=True)\n",
-    "    \n",
+    "    # theres 2 null embarked rows. I'm coding these as 'S' fo reasons described above\n",
+    "    clean_dataset['Embarked'].fillna('S', inplace = True)\n",
+    "  \n",
     "    # Encode string values into discrete integers\n",
     "    #import & instantiate\n",
     "    from sklearn import preprocessing\n",
     "    label_encoder = preprocessing.LabelEncoder()\n",
     "    # fit & transform SEX variable into discrete integer values\n",
     "    clean_dataset['Sex'] = label_encoder.fit_transform(clean_dataset['Sex'])\n",
+    "    # fit & transform EMBARKED variable into discrete integer values\n",
+    "    clean_dataset['Embarked'] = label_encoder.fit_transform(clean_dataset['Embarked'])\n",
     "    # fit & transform TICKET variable into discrete integer values. Given 210 pax have dup tickets, this could be \n",
     "    # predictive.\n",
     "    clean_dataset['Ticket'] = label_encoder.fit_transform(clean_dataset['Ticket'])\n",
     "    \n",
-    "    return clean_dataset"
+    "    # Get the response variable as a numpy matrix\n",
+    "    label = clean_dataset['Survived'].as_matrix().astype(int)\n",
+    "    \n",
+    "    # Drop redundant columns from the clean dataset\n",
+    "    # note that I'm removing the cabin information for now, because there is too much scope for overfitting here \n",
+    "    # notice also that I'm dropping Survived because I've already created the response variable\n",
+    "    clean_dataset.drop(['Name','Cabin','Survived'], axis=1, inplace=True)\n",
+    "    \n",
+    "    features = clean_dataset.as_matrix().astype(np.float)\n",
+    "    \n",
+    "    return features, label"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Check if there are any nulls in any of the columns. sklearn freaks out when it sees nulls."
+    "__Future Improvement #1:__ Note here that encoding categorical features into integers has introduced implicit ordering in the Sex and Ticket variable. Strings are not inherently ordered, but integers are. We could transform these string features by creating dummy features. This can be achieved by: <br\\> a) using sklearn.preprocessing.OneHotEncoder, or <br\\> b) using the pandas method pd.get_dummies()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use the data wrangling function to give us our features and labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(891, 8) (891,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, y = titanic_wrangling(train)\n",
+    "print X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[   3.    ,    1.    ,   22.    , ...,  523.    ,    7.25  ,    2.    ],\n",
+       "       [   1.    ,    0.    ,   38.    , ...,  596.    ,   71.2833,    0.    ],\n",
+       "       [   3.    ,    0.    ,   26.    , ...,  669.    ,    7.925 ,    2.    ],\n",
+       "       ..., \n",
+       "       [   3.    ,    0.    ,   28.    , ...,  675.    ,   23.45  ,    2.    ],\n",
+       "       [   1.    ,    1.    ,   26.    , ...,    8.    ,   30.    ,    0.    ],\n",
+       "       [   3.    ,    1.    ,   32.    , ...,  466.    ,    7.75  ,    1.    ]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like the features are clearly in need of some scaling and standardisation..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TBC..."
    ]
   }
  ],
