--- a/titanic_kaggle_prediction_model_ensemble.ipynb
+++ b/titanic_kaggle_prediction_model_ensemble.ipynb
@@ -25,12 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline \n",
+    "\n",
+    "from IPython.display import Image\n",
+    "\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_columns', None) # Display any number of columns\n",
     "\n",
@@ -52,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +150,7 @@
        "2      0  STON/O2. 3101282   7.9250   NaN        S  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +189,7 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +296,7 @@
        "Name: Fare, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +321,7 @@
        "Name: Embarked, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -365,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -412,7 +416,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Future Improvement #1:__ Note here that encoding categorical features into integers has introduced implicit ordering in the Sex and Ticket variable. Strings are not inherently ordered, but integers are. We could transform these string features by creating dummy features. This can be achieved by: <br\\> a) using sklearn.preprocessing.OneHotEncoder, or <br\\> b) using the pandas method pd.get_dummies()"
+    "__Future Improvement #1:__ Note here that encoding categorical features into integers has introduced implicit ordering in the Sex and Ticket variable. Strings are not inherently ordered, but integers are. We could transform these string features by creating dummy features. This can be achieved by: <br\\> a) using sklearn.preprocessing.OneHotEncoder, or <br\\> b) using the pandas method pd.get_dummies()<br\\>\n",
+    "__Future Improvement #2:__ Dont impute age variable only using the median age. We can use some more smarts on this. Based on the gender, class and the salutation (Mr, Mrs, Master, Miss etc.), we can get a better sense of the ages by grouping them on these lines<br\\>\n",
+    "__Future Improvement #3:__ Apply some more smarts around the family variables SibSp and Parch instead of simply putting it there. Example, children with parents surely have a much better chance of survival. So create variables such as married with spouses present, children with parents etc. kind of variables under the head family status"
    ]
   },
   {
@@ -424,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -444,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -461,7 +467,7 @@
        "       [   3.    ,    1.    ,   32.    , ...,  466.    ,    7.75  ,    1.    ]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,8 +487,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TBC..."
+    "### Perform scaling"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.82737724,  0.73769513, -0.56573646, ...,  0.91896631,\n",
+       "        -0.50244517,  0.58595414],\n",
+       "       [-1.56610693, -1.35557354,  0.66386103, ...,  1.28262456,\n",
+       "         0.78684529, -1.9423032 ],\n",
+       "       [ 0.82737724, -1.35557354, -0.25833709, ...,  1.64628282,\n",
+       "        -0.48885426,  0.58595414],\n",
+       "       ..., \n",
+       "       [ 0.82737724, -1.35557354, -0.1046374 , ...,  1.67617254,\n",
+       "        -0.17626324,  0.58595414],\n",
+       "       [-1.56610693,  0.73769513, -0.25833709, ..., -1.64656796,\n",
+       "        -0.04438104, -1.9423032 ],\n",
+       "       [ 0.82737724,  0.73769513,  0.20276197, ...,  0.63501397,\n",
+       "        -0.49237783, -0.67817453]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
+    "scaler = preprocessing.StandardScaler()\n",
+    "X = scaler.fit_transform(X)\n",
+    "# the standardscaler subtracts mean and divides by stdev\n",
+    "\n",
+    "# standardised X - this has mean 0 and stdev 1\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://www.researchgate.net/profile/Min-Yuan_Cheng/publication/260399256/figure/fig4/ AS:297311155572744@1447895911905/Fig-4-Differential-Evolution-based-cross-validation-process.png\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_url = 'https://www.researchgate.net/profile/Min-Yuan_Cheng/publication/260399256/figure/fig4/ \\\n",
+    "AS:297311155572744@1447895911905/Fig-4-Differential-Evolution-based-cross-validation-process.png'\n",
+    "Image(url=cv_url)\n",
+    "\n",
+    "# Perform cross validation because ¯\\_(ツ)_/¯"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
